src/tablist/TabList.scss
* {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

// tablist depends on border-box
.tablist,
.tablist > nav,
.tablist-tab,
.tablist-panel {
	margin:0;
	padding:0;
}


// container
.tablist {

	// nav with tabs
	> nav {
		float:left;
		display: block;
		position:relative;
		white-space: nowrap;
		max-width: 100%;
		overflow: hidden;
		border-left: 1px solid #666;
		border-right: 1px solid #666;
		border-top: 1px solid #666;
		height:40px;


		> .tablist-tab-selected {
			box-shadow:none;

			// removes the bottom border allowing the tab to flow into the content
			&:after {
				position: absolute;
				content: '';
				margin-bottom: -1px;
				bottom: 0;
				left: 0;
				width: 100%;
				height: 2px;
				background-color: #fff;
				z-index: 1;
			}
		}
	}

	// clear after floating contents
	&:after {
		display: block;
		content: '';
		clear: both;
	}

	img {
		max-width: 100%;
	}
}


// tab buttons
.tablist-tab {
	display: inline-block;
	margin: 0;
	border-left: 1px solid #666;
	padding: 10px 15px;
	cursor: pointer;
	color: #666;
	background: #ededed;
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
	height:40px;
	box-shadow:inset 0 -5px 0 rgba(0,0,0,0.1);

	&:first-child {
		border-left: none;
	}

	&:focus {
		text-decoration:underline;
		color:#00f;
		outline:none;
	}

}

	// selected
.tablist-tab-selected {
	position: relative;
	color: #000;
	background: #fff;

	&:focus {
		color:#000;
	}
}


// tab content
.tablist-panel {
	clear:left;
	padding: 10px 15px;
	border: 1px solid #666;
	margin-bottom: 8px;
	position: relative;
	top: -1px;

	// hide by default
	display: none;
}

// show the selected panel
.tablist-panel-selected {
	display: block;
}

.tablist-top {
	position:relative;

		> .tablist-backward-button,
		> .tablist-forward-button {
			position:absolute;
			top:0;
			display:block;
			height: 40px;
			width:35px;
			text-align:center;
			cursor:pointer;
			border:1px solid #666;
			background:#fff;
			z-index:10;
		}

		> .tablist-button-hide {
			display:none;
		}

		> .tablist-backward-button,
		> .tablist-forward-button {
			> .image {
				background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAQAAAADHm0dAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAUklEQVQokWNgGLpAjmE7gwxxSvcz/Ge4zSBLjFIZoML/DI8YlGmmWIV4xY+JU+wAVPof6EmCQJPhOTgkZKis8A7xComIhIPEh6ksw27ionVwAwB0ByJpmp8pkgAAAABJRU5ErkJggg==);
				background-repeat:no-repeat;
				height: 21px;
				opacity: .6;
				position: absolute;
				right: 7px;
				top: 8px;
				width: 21px;
				z-index: 3;
			}
		}

		> .tablist-backward-button {
			left:0;

			> .image {
				-webkit-transform: rotate(180deg);
				-moz-transform: rotate(180deg);
				-ms-transform: rotate(180deg);
				-o-transform: rotate(180deg);
				transform: rotate(180deg);
			}
		}

		> .tablist-forward-button {
			right:0;
	}
}

@media screen and (max-width:767px) {
	.tablist-top {
		> nav > .tablist-tab {
			text-align:center;
		}
	}
}

@media screen and (min-width: 768px) {

	// reset some of the defaults
	.tablist-left,
	.tablist-right {

		> nav {
			white-space: normal;
			overflow-x: visible;
			border-left: none;

			> .tablist-tab {
				display: block;
				margin: 0;
				max-width: none;

				&,
				&:first-child,
				&:last-child {
					border:none;
					border-bottom:1px solid #666;
				}
				&:first-child {
					border-top:1px solid #666;
				}
			}

			> .tablist-tab-selected {
				border-bottom:1px solid #666;

				&:after {
					margin-bottom: 0;
					width: 2px;
					height: 100%;
				}
			}
		}

		> .tablist-panel {
			top:0;
		}
	}


	// position tabs on left
	.tablist-left {
		// nav is on left
		> nav {
			float:left;
			width:20%;

			// with gutter to right
			> .tablist-tab {
				&,
				&:first-child,
				&:last-child {
					border-left:1px solid #666;
				}
			}

			> .tablist-tab-selected {
				-webkit-box-shadow: 2px 0 0 inset;
				box-shadow: 2px 0 0 inset;

				&:after {
					margin-right: -1px;
					right: 0;
					left:inherit;
				}
			}
		}

		// panels are 80%, on right
		> .tablist-panel {
			width:80%;
			float:right;
		}
	}


	// position tabs on right
	.tablist-right {
		// nav is on right
		> nav {
			float:right;
			width:20%;

			// with gutter to left
			> .tablist-tab {
				&,
				&:first-child,
				&:last-child {
					border-right:1px solid #666;
				}
			}

			> .tablist-tab-selected {
				-webkit-box-shadow: -2px 0 0 inset;
				box-shadow: -2px 0 0 inset;

				&:after {
					margin-left: -1px;
				}
			}
		}

		// panels are 80%, on left
		> .tablist-panel {
			width:80%;
			float:left;
		}
	}

}

